fix: advertise support for light and dark mode

--- a/src/styles/settings/colors.scss
+++ b/src/styles/settings/colors.scss
@@ -1,4 +1,5 @@
 :root {
+	color-scheme: dark light;
 	/**
      * Theme specific colors
      */
